--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -5,12 +5,14 @@
 <% end %>
 
 <%= form_tag "/categories", method: :post do %>
-    <div>
+    <div class="form">
       <div>
         <%= label_tag :name %>:
         <%= text_field_tag :name, @category.name %>
       </div>
 
-    <p></p>
-  <input type="submit" name="Create New Category" class = "submitBtn">
+    </div>
+  <br>
+    <input type="submit" name="Create New Category" class = "submitBtn">
+  </br>
 <% end %>
