--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,15 +40,14 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li role="separator" class="divider">Sort</li>
                 <li><a href="/articles?sort=title&sort_order=asc">Name Ascending</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/articles?sort=title&sort_order=desc">Name Descending</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/articles?sort=created_at&sort_order=asc">Date Created Newest To Oldest</a></li>
+                <li><a href="/articles?sort=created_at&sort_order=desc">Date Created Newest To Oldest</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/articles?sort=created_at&sort_order=desc">Date Created Oldest To Newest</a></li>
-                <li role="separator" class="divider"></li>
+                <li><a href="/articles?sort=created_at&sort_order=asc">Date Created Oldest To Newest</a></li>
+                <li role="separator" class="divider"></li>                
                 
                 <% Category.all.each do |category| %>
 
